<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/black"
    android:layout_margin="@dimen/text_margin"
    app:cardElevation="@dimen/text_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView

                android:id="@+id/br_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/ic_comp"/>

            <TextView

                android:id="@+id/br_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Branch"
                android:layout_marginLeft="@dimen/text_margin"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:fontFamily="@string/bold"/>

        </LinearLayout>


        <TextView

            android:id="@+id/br_dese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_collage1"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:fontFamily="@string/light"/>




    </LinearLayout>


</com.google.android.material.card.MaterialCardView>