<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/about_img"
            android:id="@+id/collage_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_collage"
            android:padding="10dp"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_label1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"

                android:layout_marginLeft="@dimen/text_margin"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"


                android:text="Green Environment"/>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Branch"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

            <androidx.viewpager.widget.ViewPager
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="@dimen/text_margin"
                android:foregroundGravity="center"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:id="@+id/viewPager"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contact_us"
                android:padding="10dp"
                android:shadowRadius="20"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Admission Procedure"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_height="250dp"
                android:src="@drawable/admition_pro"/>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Find the Route to reach to us"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:textColor="@color/textColor"
                android:fontFamily="@string/bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="250dp"
                android:src="@drawable/root"/>





        </LinearLayout>



         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">


             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Library"
                 android:layout_marginTop="20dp"
                 android:textSize="@dimen/title_size"
                 android:textColor="@color/textColor"
                 android:fontFamily="@string/bold"/>

             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_gravity="center"
                 android:layout_height="250dp"
                 android:src="@drawable/library"/>

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="5dp"
                 android:orientation="horizontal">

                 <HorizontalScrollView
                     android:layout_width="match_parent"
                     android:layout_height="300dp">

                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">



                         <ImageView
                             android:layout_width="300dp"
                             android:layout_height="match_parent"
                             android:layout_margin="10dp"
                             android:src="@drawable/library_counter"/>

                         <ImageView
                             android:layout_width="300dp"
                             android:layout_margin="10dp"
                             android:layout_marginTop="10dp"

                             android:layout_height="match_parent"
                             android:src="@drawable/libry_rocks"/>


                         <ImageView
                             android:layout_width="300dp"
                             android:layout_margin="10dp"
                             android:layout_marginTop="10dp"

                             android:layout_height="match_parent"
                             android:src="@drawable/library_reading"/>


                     </LinearLayout>


                 </HorizontalScrollView>

             </LinearLayout>


         </LinearLayout>



    </LinearLayout>



</androidx.core.widget.NestedScrollView>