<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.smarteist.autoimageslider.SliderLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/slider"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="The SSP Polytechnic"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@font/regular"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_collage"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/darkColor">

                <LinearLayout
                    android:layout_width="282dp"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/text_margin"
                        android:fontFamily="@string/bold"
                        android:text="Departments"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_size" />


                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Computer Engineering"
                                android:textStyle="bold"
                                android:textColor="@color/forDepartment"
                                android:textSize="@dimen/text_size" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Civil Engineering"
                                android:textStyle="bold"
                                android:textColor="@color/forDepartment"
                                android:textSize="@dimen/text_size" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Machanical Engineering"
                                android:textStyle="bold"
                                android:textColor="@color/forDepartment"
                                android:textSize="@dimen/text_size" />


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />


                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="8dp"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@string/light"
                                android:text="Electrical Engineering"
                                android:textStyle="bold"
                                android:textColor="@color/forDepartment"
                                android:textSize="@dimen/text_size" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/persident"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Details"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/title_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Contact_us"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:textSize="@dimen/text_size"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/textColor"
                    android:fontFamily="@string/light"/>

                <ImageView

                    android:id="@+id/map"
                    android:layout_width="wrap_content"
                    android:layout_height="320dp"
                    android:src="@drawable/mapimage"/>



            </LinearLayout>




        </LinearLayout>

    </ScrollView>

</FrameLayout>